--- a/como-acessar.html
+++ b/como-acessar.html
@@ -54,7 +54,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Hospital das Clínicas - Projeto Saúde Digital FIAP</p>
+    <p>&copy; 2025 Hospital das Clínicas - Projeto Saúde Digital - Challenge - FIAP</p>
   </footer>
 </body>
 </html>
