--- a/preciso-ajuda.html
+++ b/preciso-ajuda.html
@@ -42,7 +42,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Hospital das Clínicas - Projeto Saúde Digital FIAP</p>
+    <p>&copy; 2025 Hospital das Clínicas - Projeto Saúde Digital - Challenge - FIAP</p>
   </footer>
 </body>
 </html>
