--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
         Propomos uma plataforma integrada com chatbot acessível, atendimento híbrido e teleconsultas, focada em pacientes com dificuldade no uso de tecnologias. Nossa solução promove:
         <ul>
           <li>Inclusão digital com chatbot por voz (Telegram e Webchat);</li>
-          <li>Reconhecimento facial para login simplificado;</li>
           <li>Interface intuitiva, com botões grandes e alto contraste;</li>
-          <li>Integração com prontuário eletrônico e calendário de terapias;</li>
-          <li>Suporte via assistente virtual e equipe digital dedicada.</li>
+          <li>Suporte via assistente virtual e equipe digital dedicada;</li>
+          <li>Suporte na aba "Ajuda" com checklist e tutorial passo a passo de como acessar a consulta;</li>
+          <li>Galeria de vídeos tutoriais de como acessar a consulta em seu aplicativo</li>
+
         </ul>
       </p>
     </section>
