botão adicionado em página inicial

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
           <li>Suporte via assistente virtual e equipe digital dedicada;</li>
           <li>Suporte na aba "Ajuda" com checklist e tutorial passo a passo de como acessar a consulta;</li>
           <li>Galeria de vídeos tutoriais de como acessar a consulta em seu aplicativo</li>
+          <div class="galeria-botao">
+        <a href="galeria.html" class="botao-ajuda">Acesse a galeria de vídeos</a>
+      </div>
 
         </ul>
       </p>
