--- a/galeria.html
+++ b/galeria.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Galeria de Vídeos | HC Saúde Digital</title>
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="icon" href="imgs/hc.png">
+  <link rel="icon" href="favicons/favicon-16x16.png">
 </head>
 <body>
   <header>
@@ -28,7 +28,7 @@
 
     <section class="videos">
       <div class="video-item">
-        <h2>Como fazer o primeiro acesso</h2>
+        <h2>Como fazer o primeiro acesso </h2>
         <video controls>
           <source src="videos/Cópia de PRIMEIRO ACESSO.mp4" type="video/mp4">
           Seu navegador não suporta a reprodução de vídeos.
@@ -41,7 +41,8 @@
           <source src="videos/Cópia de Acesso ao Portal.mp4" type="video/mp4">
           Seu navegador não suporta a reprodução de vídeos.
         </video>
-      </div>
+    </div>
+
     </section>
   </main>
 
