add aba de download

--- a/galeria.html
+++ b/galeria.html
@@ -28,7 +28,7 @@
 
     <section class="videos">
       <div class="video-item">
-        <h2>Como fazer o primeiro acesso </h2>
+        <h2>Como fazer o primeiro acesso</h2>
         <video controls>
           <source src="videos/Cópia de PRIMEIRO ACESSO.mp4" type="video/mp4">
           Seu navegador não suporta a reprodução de vídeos.
@@ -41,10 +41,22 @@
           <source src="videos/Cópia de Acesso ao Portal.mp4" type="video/mp4">
           Seu navegador não suporta a reprodução de vídeos.
         </video>
-    </div>
-
+      </div>
     </section>
-  </main>
+
+    <section class="app-download">
+    <h2>Instale o aplicativo do HC</h2>
+    <p>Baixe agora em seu celular:</p>
+    <div class="store-buttons">
+        <a href="https://play.google.com/store/apps/details?id=com.netihc.portaldopaciente&pcampaignid=web_share" target="_blank">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" alt="Disponível no Google Play">
+        </a>
+        <a href="https://apps.apple.com/br/app/portal-do-paciente-hc/id1572694502" target="_blank">
+        <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" alt="Disponível na App Store">
+        </a>
+    </div>
+    </section>
+    </main>
 
   <footer>
     <p>&copy; 2025 Hospital das Clínicas - Projeto Saúde Digital - Challenge - FIAP</p>
