alteração na aba soluções

--- a/solucao.html
+++ b/solucao.html
@@ -32,17 +32,15 @@
       </p>
     </section>
 
-    <section>
-      <h2>Componentes da Solução</h2>
-      <ul>
-        <li><strong>Chatbot acessível:</strong> Assistente virtual com suporte a texto e voz, via Webchat e Telegram;</li>
-        <li><strong>Reconhecimento facial:</strong> Login facilitado para usuários com dificuldades motoras ou cognitivas;</li>
-        <li><strong>Interface intuitiva:</strong> Alto contraste, leitura em voz alta, botões ampliados e ícones claros;</li>
-        <li><strong>Calendário integrado:</strong> Lembretes de consultas e terapias por mensagem automatizada;</li>
-        <li><strong>Suporte técnico:</strong> Equipe dedicada e chatbot inteligente para orientação;</li>
-        <li><strong>Integração com prontuário:</strong> Comunicação com sistemas médicos para agilidade no atendimento.</li>
-      </ul>
-    </section>
+      <section>
+    <h2>Componentes da Solução</h2>
+    <ul>
+      <li><strong>Chatbot acessível:</strong> Assistente virtual com suporte a texto e voz, via Webchat e Telegram;</li>
+      <li><strong>Interface intuitiva:</strong> Alto contraste, botões ampliados e ícones claros;</li>
+      <li><strong>Suporte técnico:</strong> Equipe dedicada e chatbot inteligente para orientação;</li>
+    </ul>
+  </section>
+
 
     <section>
       <h2>Impacto Esperado</h2>
