Alteração da barra de navegação

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <nav class="navbar">
       <ul>
         <li><a href="index.html">Início</a></li>
-        <li><a href="integrantes.html">Quem somos</a></li>
+        <li><a href="ajuda.html">Ajuda</a></li>
         <li><a href="faq.html">FAQ</a></li>
         <li><a href="contato.html">Contato</a></li>
-        <li><a href="ajuda.html">Ajuda</a></li>
+        <li><a href="integrantes.html">Quem somos</a></li>
         <li><a href="solucao.html">Solução</a></li>
       </ul>
     </nav>
@@ -27,7 +27,7 @@
     <section class="hero">
       <h1>Saúde Digital no Hospital das Clínicas</h1>
       <p>Facilitando o acesso à saúde para pacientes com baixa afinidade digital</p>
-      <img src="imgs/hc-02.png" alt="Hospital das Clínicas" class="hero-img" />
+      <img src="imgs/hc-05.png" alt="Hospital das Clínicas" class="hero-img" />
     </section>
 
     <section class="resumo">
@@ -41,7 +41,7 @@
           <li>Suporte na aba "Ajuda" com checklist e tutorial passo a passo de como acessar a consulta;</li>
           <li>Galeria de vídeos tutoriais de como acessar a consulta em seu aplicativo</li>
           <div class="galeria-botao">
-        <a href="galeria.html" class="botao-ajuda">Acesse a galeria de vídeos</a>
+        <a href="galeria.html" class="botao-ajuda">Acesse o Tutorial de como entrar na consulta</a>
       </div>
 
         </ul>
