--- a/preciso-ajuda.html
+++ b/preciso-ajuda.html
@@ -14,10 +14,10 @@
     <nav class="navbar">
       <ul>
         <li><a href="index.html">Início</a></li>
-        <li><a href="integrantes.html">Integrantes</a></li>
+        <li><a href="ajuda.html">Ajuda</a></li>
         <li><a href="faq.html">FAQ</a></li>
         <li><a href="contato.html">Contato</a></li>
-        <li><a href="ajuda.html">Ajuda</a></li>
+        <li><a href="integrantes.html">Quem somos</a></li>
         <li><a href="solucao.html">Solução</a></li>
       </ul>
     </nav>
