--- a/faq.html
+++ b/faq.html
@@ -28,11 +28,11 @@
     <section class="faq-lista">
       <article class="faq-item">
         <h2>Como funciona o chatbot de voz?</h2>
-        <p>O chatbot pode ser acessado via Telegram ou Webchat, permitindo que o paciente fale ou digite sua dúvida. A assistente virtual responde com áudio ou texto.</p>
+        <p>O chatbot pode ser acessado via Telegram, permitindo que o paciente fale ou digite sua dúvida. A assistente virtual responde com áudio ou texto.</p>
       </article>
       <article class="faq-item">
         <h2>Idosos conseguem usar a plataforma?</h2>
-        <p>Sim! A interface foi projetada para ser simples e intuitiva, com botões grandes, leitura em voz alta, alto contraste e suporte técnico humanizado.</p>
+        <p>Sim! A interface foi projetada para ser simples e intuitiva, com botões grandes e suporte técnico humanizado.</p>
       </article>
       <article class="faq-item">
         <h2>Preciso instalar algum aplicativo?</h2>
