--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <p>
         Propomos uma plataforma integrada com chatbot acessível, atendimento híbrido e teleconsultas, focada em pacientes com dificuldade no uso de tecnologias. Nossa solução promove:
         <ul>
-          <li>Inclusão digital com chatbot por voz (Telegram e Webchat);</li>
+          <li>Inclusão digital com chatbot por voz (Telegram);</li>
           <li>Interface intuitiva, com botões grandes e alto contraste;</li>
           <li>Suporte via assistente virtual e equipe digital dedicada;</li>
           <li>Suporte na aba "Ajuda" com checklist e tutorial passo a passo de como acessar a consulta;</li>
