--- a/integrantes.html
+++ b/integrantes.html
@@ -31,7 +31,7 @@
         <h2>Pedro Henrique Costa</h2>
         <p>RM: 559932 | Turma: 1TDSPV</p>
         <a href="https://github.com/pedrocostah" target="_blank">GitHub</a>
-        <a href="https://linkedin.com/in/danieltamashiro" target="_blank">LinkedIn</a>
+        <a href="https://www.linkedin.com/in/pedrocostahc/" target="_blank">LinkedIn</a>
       </article>
 
       <article class="membro">
@@ -39,7 +39,7 @@
         <h2>Júlia Kauane Menezes</h2>
         <p>RM: 565568 | Turma: 1TDSPV</p>
         <a href="https://github.com/juliamenezesf" target="_blank">GitHub</a>
-        <a href="https://linkedin.com/in/victoriabassan" target="_blank">LinkedIn</a>
+        <a href="https://www.linkedin.com/in/j%C3%BAlia-m-824649267/" target="_blank">LinkedIn</a>
       </article>
 
       <article class="membro">
