Alterando css e integrantes

--- a/faq.html
+++ b/faq.html
@@ -27,8 +27,8 @@
     <h1>Perguntas Frequentes</h1>
     <section class="faq-lista">
       <article class="faq-item">
-        <h2>Como funciona o chatbot de voz?</h2>
-        <p>O chatbot pode ser acessado via Telegram, permitindo que o paciente fale ou digite sua dúvida. A assistente virtual responde com áudio ou texto.</p>
+        <h2>Como funciona o chatbot?</h2>
+        <p>Temos a nossa assistente virtual clicando no ícone de mensagem ou acessando via Telegram, permitindo que o paciente fale ou digite sua dúvida.</p>
       </article>
       <article class="faq-item">
         <h2>Idosos conseguem usar a plataforma?</h2>
@@ -36,11 +36,11 @@
       </article>
       <article class="faq-item">
         <h2>Preciso instalar algum aplicativo?</h2>
-        <p>Não. A solução pode ser acessada diretamente pelo navegador ou pelo app do Telegram, já disponível em smartphones.</p>
+        <p>Sim. Para fazer a instalação do app, acesse a aba "Início" > Clique no botão azul > Role até o fim da página > Selecione Play Store ou App Store > Faça a instalação. </p>
       </article>
       <article class="faq-item">
         <h2>É seguro compartilhar meus dados?</h2>
-        <p>Sim. Todas as interações seguem protocolos de segurança da informação do HCFMUSP, com criptografia e autenticação facial.</p>
+        <p>Sim. Todas as interações seguem protocolos de segurança da informação do HCFMUSP.</p>
       </article>
     </section>
   </main>
