--- a/como-acessar.html
+++ b/como-acessar.html
@@ -3,14 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Instruções passo a passo sobre como acessar sua consulta online no HC Saúde Digital. Confira os passos e prepare-se para a consulta.">
   <title>Como Acessar a Consulta | HC Saúde Digital</title>
   <link rel="stylesheet" href="css/styles.css" />
-  <link rel="icon" href="hc.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
 </head>
 <body>
-  <header>
-    <img src="imgs/hc.png" alt="Hospital das Clínicas" class="logo">
-    <nav class="navbar">
+  <header role="banner">
+    <a href="index.html">
+      <img src="imgs/hc.png" alt="Logotipo do Hospital das Clínicas" class="logo">
+    </a>
+    <nav class="navbar" aria-label="Navegação principal">
       <ul>
         <li><a href="index.html">Início</a></li>
         <li><a href="ajuda.html">Ajuda</a></li>
@@ -25,32 +28,42 @@
   <main class="passos">
     <h1>Como acessar a consulta</h1>
 
-    <section class="passo">
-      <h2>Passo 1 – Verifique seu celular</h2>
-      <p>Tenha certeza de que seu celular está carregado e com acesso à internet.</p>
-    </section>
+    <ul class="passos">
+      <li>
+        <section class="passo">
+          <h2>Passo 1 – Verifique seu celular</h2>
+          <p>Tenha certeza de que seu celular está carregado e com acesso à internet.</p>
+        </section>
+      </li>
 
-    <section class="passo">
-      <h2>Passo 2 – Abra o link da consulta</h2>
-      <p>O link é enviado por WhatsApp ou aparece no aplicativo. Toque no link no horário agendado.</p>
-    </section>
+      <li>
+        <section class="passo">
+          <h2>Passo 2 – Abra o link da consulta</h2>
+          <p>O link é enviado por WhatsApp ou aparece no aplicativo. Toque no link no horário agendado.</p>
+        </section>
+      </li>
 
-    <section class="passo">
-      <h2>Passo 3 – Permita acesso à câmera e microfone</h2>
-      <p>Quando solicitado, clique em "Permitir" para que o médico consiga te ver e ouvir durante a consulta.</p>
-    </section>
+      <li>
+        <section class="passo">
+          <h2>Passo 3 – Permita acesso à câmera e microfone</h2>
+          <p>Quando solicitado, clique em "Permitir" para que o médico consiga te ver e ouvir durante a consulta.</p>
+        </section>
+      </li>
 
-    <section class="passo">
-      <h2>Passo 4 – Mantenha o ambiente silencioso</h2>
-      <p>Escolha um local tranquilo, sem ruídos, para melhor comunicação durante a consulta.</p>
-    </section>
+      <li>
+        <section class="passo">
+          <h2>Passo 4 – Mantenha o ambiente silencioso</h2>
+          <p>Escolha um local tranquilo, sem ruídos, para melhor comunicação durante a consulta.</p>
+        </section>
+      </li>
 
-    <section class="passo">
-      <h2>Passo 5 – Utilize fones de ouvido (opcional)</h2>
-      <p>O uso de fones ajuda a ouvir melhor e evita ruídos externos.</p>
-    </section>
-
-    
+      <li>
+        <section class="passo">
+          <h2>Passo 5 – Utilize fones de ouvido (opcional)</h2>
+          <p>O uso de fones ajuda a ouvir melhor e evita ruídos externos.</p>
+        </section>
+      </li>
+    </ul>
   </main>
 
   <footer>
