--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <img src="imgs/hc.png" alt="Hospital das Clínicas" class="logo" />
+    <img src="imgs/hc.png" alt="Logo do Hospital das Clínicas" class="logo" />
     <nav class="navbar">
       <ul>
         <li><a href="index.html">Início</a></li>
@@ -27,25 +27,24 @@
     <section class="hero">
       <h1>Saúde Digital no Hospital das Clínicas</h1>
       <p>Facilitando o acesso à saúde para pacientes com baixa afinidade digital</p>
-      <img src="imgs/hc-05.png" alt="Hospital das Clínicas" class="hero-img" />
+      <img src="imgs/hc-05.png" alt="Imagem do Hospital das Clínicas" class="hero-img" />
     </section>
 
     <section class="resumo">
       <h2>Resumo da Solução</h2>
       <p>
         Propomos uma plataforma integrada com chatbot acessível, atendimento híbrido e teleconsultas, focada em pacientes com dificuldade no uso de tecnologias. Nossa solução promove:
-        <ul>
-          <li>Inclusão digital com chatbot por voz (Telegram);</li>
-          <li>Interface intuitiva, com botões grandes e alto contraste;</li>
-          <li>Suporte via assistente virtual e equipe digital dedicada;</li>
-          <li>Suporte na aba "Ajuda" com checklist e tutorial passo a passo de como acessar a consulta;</li>
-          <li>Galeria de vídeos tutoriais de como acessar a consulta em seu aplicativo</li>
-          <div class="galeria-botao">
+      </p>
+      <ul>
+        <li>Inclusão digital com chatbot por voz (Telegram);</li>
+        <li>Interface intuitiva, com botões grandes e alto contraste;</li>
+        <li>Suporte via assistente virtual e equipe digital dedicada;</li>
+        <li>Suporte na aba "Ajuda" com checklist e tutorial passo a passo de como acessar a consulta;</li>
+        <li>Galeria de vídeos tutoriais de como acessar a consulta em seu aplicativo</li>
+      </ul>
+      <div class="galeria-botao">
         <a href="galeria.html" class="botao-ajuda">Acesse o Tutorial de como entrar na consulta</a>
       </div>
-
-        </ul>
-      </p>
     </section>
   </main>
 
