--- a/integrantes.html
+++ b/integrantes.html
@@ -41,7 +41,7 @@
         <h2>Júlia Kauane Menezes</h2>
         <p>RM: 565568 | Turma: 1TDSPV</p>
         <a href="https://github.com/juliamenezesf" target="_blank">GitHub</a>
-        <a href="https://www.linkedin.com/in/j%C3%BAlia-m-824649267/" target="_blank">LinkedIn</a>
+        <a href="https://www.linkedin.com/in/julia-menezesf/" target="_blank">LinkedIn</a>
       </article>
 
 
