editando texto page galeria

--- a/galeria.html
+++ b/galeria.html
@@ -54,7 +54,7 @@
     </section>
 
     <section class="app-download">
-      <h2>Instale o aplicativo do HC</h2>
+      <h2>Instale o aplicativo do HC e acesse suas consultas</h2>
       <p>Baixe agora em seu celular:</p>
       <div class="store-buttons">
         <a href="https://play.google.com/store/apps/details?id=com.netihc.portaldopaciente&pcampaignid=web_share" target="_blank" aria-label="Baixar no Google Play">
