--- a/como-acessar.html
+++ b/como-acessar.html
@@ -9,63 +9,119 @@
   <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
 </head>
 <body>
-  <header role="banner">
-    <a href="index.html">
-      <img src="imgs/hc.png" alt="Logotipo do Hospital das Clínicas" class="logo">
+  <header>
+        <a href="index.html">
+      <img src="imgs/hc.png" alt="Logotipo do Hospital das Clínicas" class="logo" />
     </a>
-    <nav class="navbar" aria-label="Navegação principal">
+    <nav class="navbar">
       <ul>
         <li><a href="index.html">Início</a></li>
         <li><a href="ajuda.html">Ajuda</a></li>
         <li><a href="faq.html">FAQ</a></li>
         <li><a href="contato.html">Contato</a></li>
         <li><a href="integrantes.html">Quem somos</a></li>
-        <li><a href="solucao.html">Solução</a></li>
       </ul>
     </nav>
   </header>
 
   <main class="passos">
-    <h1>Como acessar a consulta</h1>
+  <h1>Como fazer o primeiro acesso no app ou site</h1>
+  <ul class="passos">
+    <li>
+      <section class="passo">
+        <h2>Passo 1</h2>
+        <p>Acesse o Portal do Paciente HC pelo site ou aplicativo</p>
+      </section>
+    </li>
+    <li>
+      <section class="passo">
+        <h2>Passo 2</h2>
+        <p>Clique na opção "Cadastrar Senha"</p>
+      </section>
+    </li>
+    <li>
+      <section class="passo">
+        <h2>Passo 3</h2>
+        <p>Digite o número do CPF do paciente e clique na opção "Localizar Paciente"</p>
+      </section>
+    </li>
+    <li>
+      <section class="passo">
+        <h2>Passo 4</h2>
+        <p>Informe dados para contato, confirme as informações pessoais e registre uma senha de acesso</p>
+      </section>
+    </li>
+    <li>
+      <section class="passo">
+        <h2>Passo 5</h2>
+        <p>Clique novamente em "Cadastrar Senha" e "Acessar Agora"</p>
+      </section>
+    </li>
+    <li>
+      <section class="passo">
+        <h2>Passo 6</h2>
+        <p>Digite o CPF e a senha cadastrada</p>
+      </section>
+    </li>
+    <li>
+      <section class="passo">
+        <h2>Passo 7</h2>
+        <p>Acesse o Portal, selecione a opção "Teleconsultas" e aceite o termo de autorização se estiver de acordo</p>
+      </section>
+    </li>
+    <li>
+      <section class="passo">
+        <h2>Passo 8</h2>
+        <p>Selecione o teleatendimento desejado. Habilite câmera, microfone e aguarde o profissional entrar na sala</p>
+      </section>
+    </li>
+  </ul>
 
-    <ul class="passos">
-      <li>
-        <section class="passo">
-          <h2>Passo 1 – Verifique seu celular</h2>
-          <p>Tenha certeza de que seu celular está carregado e com acesso à internet.</p>
-        </section>
-      </li>
-
-      <li>
-        <section class="passo">
-          <h2>Passo 2 – Abra o link da consulta</h2>
-          <p>O link é enviado por WhatsApp ou aparece no aplicativo. Toque no link no horário agendado.</p>
-        </section>
-      </li>
-
-      <li>
-        <section class="passo">
-          <h2>Passo 3 – Permita acesso à câmera e microfone</h2>
-          <p>Quando solicitado, clique em "Permitir" para que o médico consiga te ver e ouvir durante a consulta.</p>
-        </section>
-      </li>
-
-      <li>
-        <section class="passo">
-          <h2>Passo 4 – Mantenha o ambiente silencioso</h2>
-          <p>Escolha um local tranquilo, sem ruídos, para melhor comunicação durante a consulta.</p>
-        </section>
-      </li>
-
-      <li>
-        <section class="passo">
-          <h2>Passo 5 – Utilize fones de ouvido (opcional)</h2>
-          <p>O uso de fones ajuda a ouvir melhor e evita ruídos externos.</p>
-        </section>
-      </li>
-    </ul>
-  </main>
-
+  <h1>Como acessar a consulta</h1>
+  <ul class="passos">
+    <li>
+      <section class="passo">
+        <h2>Passo 1</h2>
+        <p>Acesse o Portal do Paciente HC pelo site ou aplicativo</p>
+      </section>
+    </li>
+    <li>
+      <section class="passo">
+        <h2>Passo 2</h2>
+        <p>Após o login, acesse o menu principal.</p>
+      </section>
+    </li>
+    <li>
+      <section class="passo">
+        <h2>Passo 3</h2>
+        <p>Role a barra para baixo até localizar a seção "Termos" e clique nela</p>
+      </section>
+    </li>
+    <li>
+      <section class="passo">
+        <h2>Passo 4</h2>
+        <p>Dentro da seção "Termos" clique na opção "Termo de aceite de teleconsulta"</p>
+      </section>
+    </li>
+    <li>
+      <section class="passo">
+        <h2>Passo 5</h2>
+        <p>Ao abrir o termo, clique em "Alterar resposta"</p>
+      </section>
+    </li>
+    <li>
+      <section class="passo">
+        <h2>Passo 6</h2>
+        <p>Se concordar com o termo de autorização, selecione "Sim"</p>
+      </section>
+    </li>
+     <section class="passo">
+        <h2>Passo 7</h2>
+        <p>O seu consentimento é de extrema importância para realização da teleconsulta</p>
+      </section>
+    </li>
+  </ul>
+</main>
   <footer>
     <p>&copy; 2025 Hospital das Clínicas - Projeto Saúde Digital - Challenge - FIAP</p>
   </footer>
