--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
         <li><a href="faq.html">FAQ</a></li>
         <li><a href="contato.html">Contato</a></li>
         <li><a href="integrantes.html">Quem somos</a></li>
-        <li><a href="solucao.html">Solução</a></li>
       </ul>
     </nav>
   </header>
@@ -30,21 +29,23 @@
       <img src="imgs/hc-05.png" alt="Imagem do Hospital das Clínicas" class="hero-img" />
     </section>
 
-    <section class="resumo">
-      <h2>Resumo da Solução</h2>
+    <section>
+      <article class="resumo">
+      <h2>Bem-vindo ao HC Sáude Digital</h2>
       <p>
-        Propomos uma plataforma integrada com chatbot acessível, atendimento híbrido e teleconsultas, focada em pacientes com dificuldade no uso de tecnologias. Nossa solução promove:
-      </p>
-      <ul>
-        <li>Inclusão digital com chatbot por voz (Telegram);</li>
-        <li>Interface intuitiva, com botões grandes e alto contraste;</li>
-        <li>Suporte via assistente virtual e equipe digital dedicada;</li>
-        <li>Suporte na aba "Ajuda" com checklist e tutorial passo a passo de como acessar a consulta;</li>
-        <li>Galeria de vídeos tutoriais de como acessar a consulta em seu aplicativo</li>
-      </ul>
-      <div class="galeria-botao">
-        <a href="galeria.html" class="botao-ajuda">Acesse o Tutorial de como entrar na consulta</a>
-      </div>
+       Este site foi criado para ajudar pessoas que têm dificuldade em usar celulares ou computadores a participarem de consultas médicas por vídeo com mais facilidade. A saúde digital está se tornando cada vez mais comum, mas sabemos que nem todos se sentem à vontade com a tecnologia — e é justamente aí que queremos ajudar.
+       </p>
+       <p>
+         Aqui você encontrará um passo a passo simples e visual, com explicações claras, imagens ilustrativas e até instruções em áudio. Tudo foi pensado para tornar o processo mais acessível e tranquilo, mesmo para quem nunca usou uma chamada de vídeo antes. Também disponibilizamos uma seção com dúvidas frequentes e uma área de contato, caso você precise de apoio extra.
+       </p>
+       <p>
+        Nosso objetivo é que ninguém perca uma consulta por não saber como acessar. A tecnologia deve aproximar as pessoas da saúde, não afastá-las. Esperamos que este site seja um companheiro útil para você ou para alguém que você queira ajudar. Navegue à vontade e conte conosco!
+       </p>
+      </article>
+     <div class="galeria-botao">
+     <a href="galeria.html" class="botao-ajuda">Aprenda a acessar sua consulta</a>
+      <a href="https://portaldopaciente.hc.fm.usp.br/" class="botao-ajuda">Acessar consulta</a>
+    </div>
     </section>
   </main>
 
