adicionando perguntas ao FAQ

--- a/faq.html
+++ b/faq.html
@@ -43,6 +43,18 @@
         <h2>É seguro compartilhar meus dados?</h2>
         <p>Sim. Todas as interações seguem protocolos de segurança da informação do HCFMUSP.</p>
       </article>
+         <article class="faq-item">
+        <h2>Não consigo entrar na consulta, e agora?</h2>
+        <p>Não se preocupe! Vá até a aba “Ajuda” e clique em “Como acessar a consulta”. Se ainda tiver dúvidas, entre em contato com o hospital.</p>
+      </article>
+       <article class="faq-item">
+        <h2>Como eu sei se estou pronto para a consulta?</h2>
+        <p>Na aba “Ajuda”, clique em “Estou pronto para a consulta?”. Você vai ver uma lista simples para confirmar se está tudo certo.</p>
+      </article>
+         <article class="faq-item">
+        <h2>O que eu preciso para conseguir entrar na consulta?</h2>
+        <p>Você precisa de um celular, tablet ou computador com acesso à internet. Também é necessário ter o aplicativo da consulta instalado ou acessar o portal pelo navegador. Para instalar o aplicativo, vá até a aba "Início", clique no botão "Aprenda a acessar sua consulta", role até o final da página e escolha a opção da Play Store (Android) ou App Store (iPhone). Depois, instale o app e faça o login. Além disso, procure estar em um ambiente silencioso e com boa iluminação para facilitar a consulta.</p>
+      </article>
     </section>
   </main>
 
